--- a/src/Home.css
+++ b/src/Home.css
@@ -10,6 +10,7 @@
   height: 100vh !important;
   /* Gets rid of edges in columns */
   padding: 0px !important;
+  box-shadow: 1px 1px 5px black;
 }
 
 .section1 {
@@ -25,7 +26,7 @@
 }
 
 .section4 {
-  background-color: rgba(255, 255, 0, 0.506);
+  background-color: rgba(107, 6, 6, 0.644);
 }
 
 /* Scale the section on hover */
@@ -41,28 +42,71 @@
   transform: scaleX(1.01); /* Adjust the scaling factor as needed */
   transform-origin: right center;
   z-index: 1; /* Bring the hovered section to the front */
-  background-color: rgba(128, 0, 128, 0.803);
+  background-color: rgba(230, 226, 6, 0.534);
   box-shadow: 1px 20px 20px black;
 }
 
 /* ======================================================= */
 
-.avatarTitle {
-  font-size: 20px;
-  margin-bottom: 200px;
+/* Style the container for section4 */
+.section4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 }
 
+/* Style the video */
 .AvatarVid1 {
-  width: 100%; /* Make the video fill the entire container width */
-  height: 50vh; /* Make the video fill the entire container height */
-  object-fit: cover; /* Crop the video to cover the container */
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
   filter: grayscale(100%);
   transition: all 0.4s ease-in-out;
-  opacity: 75%;
+  opacity: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 0;
+  transform: scale(3.4);
 }
 
-.AvatarVid1:hover {
-  filter: grayscale(0%);
+.section4:hover .AvatarVid1 {
   opacity: 100%;
+  filter: grayscale(0%);
+  transform: scale(3.7);
+  z-index: 1;
 }
 
+/* Style the image */
+.Avi1Pic {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  transition: all 0.4s ease-in-out;
+  z-index: 1;
+  position: absolute;
+  bottom: 0; /* Position the image at the bottom */
+  left: 0;
+  right: 100px;
+  margin: auto;
+  transform: scale(1.5);
+}
+
+.section4:hover .Avi1Pic {
+  opacity: 20%;
+  z-index: 0;
+  transform: scale(1);
+}
+
+/* Style the title to be at the top */
+.avatarTitle {
+  font-size: 50px;
+  margin-top: 20px; /* Adjust the margin-top as needed */
+  font-weight: bold;
+}
