--- a/src/Home.css
+++ b/src/Home.css
@@ -64,12 +64,11 @@
   margin: 0; /* Remove default margin to prevent extra spacing */
 }
 
-
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 /* ======================================================= */
-/* SECTION 4 - AVATAR 1 */
+/* SECTION 3 - AVATAR 1 */
 /* ======================================================= */
-
 
 /* Style the container for section4 */
 .section3 {
@@ -107,6 +106,27 @@
   box-shadow: 1px 20px 20px black;
 }
 
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* AVATAR TITLE */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* Style the title to be at the top */
+.avatarTitle {
+  font-size: 50px;
+  margin-top: 5vh; /* Adjust the margin-top as needed */
+  font-weight: bold;
+  color: white;
+  text-shadow: 2px 2px 10px black;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* AVATAR VIDEO */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
 /* Style the video */
 .AvatarVid1 {
   max-width: 100%;
@@ -132,6 +152,10 @@
   z-index: 1;
 }
 
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* AVATAR PICTURE */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
 /* Style the image */
 .Avi1Pic {
   max-width: 100%;
@@ -154,6 +178,53 @@
   transform: scale(1);
 }
 
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* ========================= */
+/* SECTION 4 - AVATAR 2 */
+/* ========================= */
+
+/* Style the container for section4 */
+.section4 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+  background: linear-gradient(to bottom, rgb(138, 1, 202), black); /* Create a vertical gradient from red to black */
+}
+
+/* Create a pseudo-element for the gradient background */
+.section4::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(to bottom, #abab3d, #3458ad); /* Create a vertical gradient from red to black */
+  opacity: 0; /* Initially set opacity to 0 */
+  transition: opacity 1s ease-in-out; /* Transition the opacity property */
+}
+
+.section4:hover::before {
+  opacity: 1; /* Set opacity to 1 on hover */
+}
+
+.section4:hover {
+  transform: scaleX(1.01); /* Adjust the scaling factor as needed */
+  transform-origin: right center;
+  z-index: 1; /* Bring the hovered section to the front */
+  background-color: rgba(230, 226, 6, 0.534);
+  box-shadow: 1px 20px 20px black;
+}
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* AVATAR TITLE */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
 /* Style the title to be at the top */
 .avatarTitle {
   font-size: 50px;
@@ -162,3 +233,64 @@
   color: white;
   text-shadow: 2px 2px 10px black;
 }
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* AVATAR VIDEO */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* Style the video */
+.AvatarVid2 {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  filter: grayscale(100%);
+  transition: all 0.6s ease-in-out;
+  opacity: 50%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 0;
+  transform: scale(3.4);
+}
+
+.section4:hover .AvatarVid1 {
+  opacity: 100%;
+  filter: grayscale(0%);
+  transform: scale(3.7);
+  z-index: 1;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* AVATAR PICTURE */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+/* Style the image */
+.Avi2Pic {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  transition: all 0.4s ease-in-out;
+  z-index: 1;
+  position: absolute;
+  bottom: 0; /* Position the image at the bottom */
+  left: 0;
+  right: 100px;
+  margin: auto;
+  transform: scale(1.5);
+}
+
+/* When section 4 is hovered over, do this to Avi1Pic: */
+.section4:hover .Avi2Pic {
+  opacity: 20%;
+  z-index: 0;
+  transform: scale(1);
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
