--- a/src/Home.css
+++ b/src/Home.css
@@ -10,7 +10,8 @@
   padding: 0px !important;
   transition: all 0.3s ease-in-out;
   height: 100vh;
-  box-shadow: 1px 1px 5px black;
+  box-shadow: 0px 0px 25px black;
+  border: 1px solid black;
 }
 
 .section1 {
@@ -24,10 +25,11 @@
 
 /* Scale the section on hover */
 .section1:hover, .section2:hover, .section3:hover, .section4:hover {
-  transform: scaleX(1); /* Adjust the scaling factor as needed */
+  transform: scale(1.1); /* Adjust the scaling factor as needed */
   transform-origin: center;
-  z-index: 1; /* Bring the hovered section to the front */
-  border: 1px solid rgba(255, 255, 255, 0.637);
+  z-index: 2; /* Bring the hovered section to the front */
+  border: 1px solid rgba(255, 255, 255, 0.867);
+  box-shadow: 0px 0px 60px black;
 }
 
 /* ========================================================== */
@@ -78,13 +80,21 @@
   font-weight: bold;
   color: rgba(255, 255, 255, 0.856);
   text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.918);
+  z-index: 2;
+  transition: all 0.2s ease-in-out;
+}
+
+.section3:hover .avatarTitle, .section4:hover .avatarTitle {
+  margin-top: 9vh;
+  font-size: 40px;
+  opacity: 50%;
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /* COL SECTIONS */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-/* Style the container for section4 */
+/* Container Gradients and effects behind them */
 .section3 {
   background: linear-gradient(to bottom, #2b3fbd, black); /* Create a vertical gradient from red to black */
 }
@@ -94,11 +104,11 @@
 }
 
 .section4 {
-  background: linear-gradient(to bottom, #f7a97a, black); /* Create a vertical gradient from red to black */
+  background: linear-gradient(to bottom, #ff741d, black); /* Create a vertical gradient from red to black */
 }
 
 .section4::before {
-  background: linear-gradient(to bottom, #f7a97a, #5e5c65); /* Create a vertical gradient from red to black */
+  background: linear-gradient(to bottom, #ff741d, #ffc39e); /* Create a vertical gradient from red to black */
 }
 
 .section3, .section4 {
@@ -185,7 +195,7 @@
 /* When section 4 is hovered over, do this to Avi1Pic: */
 .section3:hover .Avi1Pic, .section4:hover .Avi2Pic {
   opacity: 30%;
-  z-index: 0;
-  transform: scale(4);
+  z-index: 0 !important;
+  transform: scale(6);
   filter: grayscale(100%);
 }
