--- a/src/Home.css
+++ b/src/Home.css
@@ -68,7 +68,6 @@
 
 .pageTitle {
   font-size: 70px;
-  margin-top: 6vh; /* Adjust the margin-top as needed */
   font-weight: bold;
   color: rgba(255, 255, 255, 0.856);
   text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.918);
@@ -76,12 +75,18 @@
   transition: all 0.2s ease-in-out;
 }
 
+.fstitlelogo {
+  opacity: 70%;
+  margin-top: 1vh;
+  width: 22vh;
+  z-index: -2;
+}
+
 /* YourComponent.css */
 
 .headerPic {
-  max-width: 80%;
+  max-width: 90%;
   max-height: 100%;
-  object-fit: contain;
   transition: all 0.5s ease-in-out;
   z-index: 1;
   position: fixed;
@@ -97,7 +102,11 @@
 /* ======================================================= */
 /* SECTION 2 */
 /* ======================================================= */
-
+.fslogo {
+  max-width: 60%;
+  max-height: 100%;
+  object-fit: contain;
+}
 
 /* ======================================================= */
 /* SECTION 3/4 - AVATAR 1/2 */
@@ -116,6 +125,24 @@
   text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.918);
   z-index: 2;
   transition: all 0.2s ease-in-out;
+}
+
+.barryLogo {
+  border: 2px solid black;
+  border-radius: 100%;
+  opacity: 50%;
+  position: fixed;
+  margin-top: 3vh;
+  width: 25vh;
+  z-index: -2;
+}
+
+.goonSquadLogo {
+  opacity: 70%;
+  position: fixed;
+  margin-top: 2vh;
+  width: 30vh;
+  z-index: -2;
 }
 
 .section3:hover .avatarTitle, .section4:hover .avatarTitle {
@@ -196,7 +223,7 @@
   opacity: 100%;
   filter: grayscale(0%);
   transform: scale(3.9);
-  z-index: 1;
+  z-index: 2;
 }
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
