--- a/src/Home.css
+++ b/src/Home.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
+
 .mainRow {
   height: 100vh !important;
   display: flex;
   justify-content: center;
   text-align: center;
+  font-family: 'Russo One', sans-serif;
 }
 
 .section1, .section2, .section3, .section4 {
@@ -139,10 +142,11 @@
   font-size: 50px;
   margin-top: 5vh; /* Adjust the margin-top as needed */
   font-weight: bold;
-  color: rgba(255, 255, 255, 0.856);
-  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.918);
+  color: rgb(255, 255, 255);
+  text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.918);
   z-index: 2;
   transition: all 0.2s ease-in-out;
+  opacity: 65%;
 }
 
 .barryLogo {
