--- a/src/Home.css
+++ b/src/Home.css
@@ -8,7 +8,7 @@
   font-family: 'Russo One', sans-serif;
 }
 
-.section1, .section2, .avatar1, .avatar2 {
+.middleSection, .avatar1, .avatar2 {
   /* Gets rid of edges in columns */
   padding: 0px !important;
   transition: all 0.3s ease-in-out;
@@ -18,12 +18,16 @@
 }
 /* YourComponent.css */ 
 
-.section2 {
-  background-color: linear-gradient(to bottom, #8d0000d5, rgba(0, 0, 0, 0.856));
+.middleSection {
+  background: linear-gradient(to bottom, #b70000bc, rgba(0, 0, 0, 0.87)); /* Create a vertical gradient from red to black */
+}
+
+.middleSection::before {
+  background: linear-gradient(to bottom, #b70000bc, rgba(0, 0, 0, 0.87)); /* Create a vertical gradient from red to black */
 }
 
 /* Scale the section on hover */
-.section1:hover, .section2:hover, .avatar1:hover, .avatar2:hover {
+.middleSection:hover, .avatar1:hover, .avatar2:hover {
   z-index: 2; /* Bring the hovered section to the front */
   border: 1px solid rgba(255, 255, 255, 0.867);
   box-shadow: 0px 0px 60px black;
@@ -95,12 +99,10 @@
   filter: grayscale(0%);
 }
 
-/* Remove transform property from headerPic */
-
-
 /* ======================================================= */
 /* SECTION 2 */
 /* ======================================================= */
+
 .fslogo {
   max-width: 50%;
   max-height: 100%;
@@ -135,7 +137,7 @@
 
 /* Style the title to be at the top */
 .avatarTitle {
-  font-size: 50px;
+  font-size: 5vh;
   margin-top: 5vh; /* Adjust the margin-top as needed */
   font-weight: bold;
   color: rgb(255, 255, 255);
@@ -190,7 +192,7 @@
   background: linear-gradient(to bottom, #ff741d80, #ffc39e8c); /* Create a vertical gradient from red to black */
 }
 
-.avatar1, .avatar2 {
+.avatar1, .avatar2, .middleSection {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -199,8 +201,12 @@
   overflow: hidden;
 }
 
+.middleSectionZindex {
+  z-index: 1;
+}
+
 /* Create a pseudo-element for the gradient background */
-.avatar1::before, .avatar2::before {
+.avatar1::before, .avatar2::before, .middleSection::before {
   content: "";
   position: absolute;
   top: 0;
@@ -211,7 +217,7 @@
   transition: opacity 0.5s ease-in-out; /* Transition the opacity property */
 }
 
-.avatar1:hover::before, .avatar2:hover::before {
+.avatar1:hover::before, .avatar2:hover::before, .middleSection:hover::before {
   opacity: 1; /* Set opacity to 1 on hover */
 }
 
