--- a/src/Home.css
+++ b/src/Home.css
@@ -193,14 +193,22 @@
 }
 
 .avatar3 {
-  background: linear-gradient(to bottom, #eaa279, rgba(0, 0, 0, 0.856)); /* Create a vertical gradient from red to black */
+  background: linear-gradient(to bottom, #eaa279b7, rgba(0, 0, 0, 0.856)); /* Create a vertical gradient from red to black */
 }
 
 .avatar3::before {
   background: linear-gradient(to bottom, #a06543, rgba(196, 196, 196, 0.856)); /* Create a vertical gradient from red to black */
 }
 
-.avatar1, .avatar2, .middleSection, .avatar3 {
+.avatar4 {
+  background: linear-gradient(to bottom, #2e9516c4, rgba(0, 0, 0, 0.856)); /* Create a vertical gradient from red to black */
+}
+
+.avatar4::before {
+  background: linear-gradient(to bottom, #1b570ec4, rgba(196, 196, 196, 0.856)); /* Create a vertical gradient from red to black */
+}
+
+.avatar1, .avatar2, .middleSection, .avatar3, .avatar4 {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -214,7 +222,7 @@
 }
 
 /* Create a pseudo-element for the gradient background */
-.avatar1::before, .avatar2::before, .middleSection::before, .avatar3::before {
+.avatar1::before, .avatar2::before, .middleSection::before, .avatar3::before, .avatar4::before {
   content: "";
   position: absolute;
   top: 0;
@@ -225,7 +233,7 @@
   transition: opacity 0.5s ease-in-out; /* Transition the opacity property */
 }
 
-.avatar1:hover::before, .avatar2:hover::before, .middleSection:hover::before, .avatar3:hover::before{
+.avatar1:hover::before, .avatar2:hover::before, .middleSection:hover::before, .avatar3:hover::before, .avatar4:hover::before{
   opacity: 1; /* Set opacity to 1 on hover */
 }
 
@@ -234,7 +242,7 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 /* Style the video */
-.AvatarVid1, .AvatarVid2, .AvatarVid3 {
+.AvatarVid1, .AvatarVid2, .AvatarVid3, .AvatarVid4 {
   max-width: 100%;
   max-height: 100%;
   object-fit: cover;
@@ -251,7 +259,7 @@
   transform: scale(3.4);
 }
 
-.avatar1:hover .AvatarVid1, .avatar2:hover .AvatarVid2, .avatar3:hover .AvatarVid3 {
+.avatar1:hover .AvatarVid1, .avatar2:hover .AvatarVid2, .avatar3:hover .AvatarVid3, .avatar4:hover .AvatarVid4 {
   opacity: 100%;
   filter: grayscale(0%);
   transform: scale(3.9);
@@ -263,7 +271,7 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 /* Style the image */
-.Avi1Pic, .Avi2Pic, .Avi3Pic {
+.Avi1Pic, .Avi2Pic, .Avi3Pic, .Avi4Pic {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
@@ -277,7 +285,7 @@
   filter: grayscale(0%);
 }
 
-.Avi1Pic, .Avi3Pic {
+.Avi1Pic, .Avi3Pic, .Avi4Pic {
   transform: scale(1.2);
 }
 
@@ -286,7 +294,7 @@
 }
 
 /* When section 4 is hovered over, do this to Avi1Pic: */
-.avatar1:hover .Avi1Pic, .avatar2:hover .Avi2Pic, .avatar3:hover .Avi3Pic {
+.avatar1:hover .Avi1Pic, .avatar2:hover .Avi2Pic, .avatar3:hover .Avi3Pic, .avatar4:hover .Avi4Pic {
   opacity: 25%;
   z-index: 0 !important;
   transform: scale(2.2);
