Added Button Functionality
- Contact info is setup

--- a/src/Home.css
+++ b/src/Home.css
@@ -95,6 +95,11 @@
   width: 32vh;
 }
 
+.btnContent {
+  color: white;
+  font-size: 3vh;
+}
+
 /* ======================================================= */
 /* SECTION 3/4 - AVATAR 1/2 */
 /* ======================================================= */
