--- a/src/Home.css
+++ b/src/Home.css
@@ -117,6 +117,16 @@
   text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.918);
   z-index: 2;
   transition: all 0.2s ease-in-out;
+  opacity: 80%;
+}
+
+.avatarMk {
+  margin-top: -2vh; /* Adjust the margin-top as needed */
+  font-size: 2.5vh;
+  color: rgba(255, 255, 255, 0.692);
+  text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.918);
+  z-index: 2;
+  transition: all 0.2s ease-in-out;
   opacity: 65%;
 }
 
