--- a/src/Home.css
+++ b/src/Home.css
@@ -28,7 +28,7 @@
 
 /* Scale the section on hover */
 .middleSection:hover, .avatar1:hover, .avatar2:hover, .avatar3:hover, .avatar4:hover {
-  z-index: 2; /* Bring the hovered section to the front */
+  z-index: 1; /* Bring the hovered section to the front */
   border: 1px solid rgba(255, 255, 255, 0.867);
   box-shadow: 0px 0px 60px black;
 }
@@ -51,9 +51,9 @@
 .middlebtn {
   font-size: 3vh;
   margin-bottom: 35px;
-  background-color: rgba(197, 50, 50, 0.575);
+  background-color: rgba(189, 135, 135, 0.394);
   color: white;
-  border: 1px solid black;
+  border: 1px solid white;
   padding: 10px;
   width: 25vh;
   transition: all 0.2s ease-in-out;
@@ -63,6 +63,11 @@
   background-color: rgba(46, 3, 3, 0.575);
   border: 1px solid white;
   width: 32vh;
+}
+
+.middlebtn:focus {
+  background-color: rgba(19, 1, 1, 0.575);
+  border: 1px solid white;
 }
 
 .btnContent {
@@ -232,7 +237,7 @@
   object-fit: contain;
   transition: all 0.2s ease-in-out;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   bottom: 0; /* Position the image at the bottom */
   left: 0;
   right: 100px;
